sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:11: error: 'case' expected but identifier found.
      RED =>
      ^DutchFlagAlgo:12: error: '}' expected but ';' found.
        swap(i, nextRed);
                        ^DutchFlagAlgo:23: error: eof expected but '}' found.
}
^